increased weaveform size to prevent overflow fixed bug when in attributes when changing genre

--- a/MillionSongs/css/styles.css
+++ b/MillionSongs/css/styles.css
@@ -270,6 +270,9 @@ tr {
     width: 24%;
     margin-right: 1%;
 }
+#wave1{
+    margin-top: 30px;
+}
 
 /* OVERTIME STYLES */
 
